# Learn-CMake

./: CMakeLists.txt  add.cpp  calc.h  div.cpp  main.cpp  mul.cpp  sub.cpp
calc/: CMakeLists.txt  div.cpp
include/: main.h
src/: CMakeLists.txt  main.cpp
string_utils/: CMakeLists.txt  string_utils.cpp  string_utils.h
test/: CMakeLists.txt  calc_test.cpp  string_utils_tests.cpp
